--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,16 +7,16 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         #entradaEditable span.correcto {
-          color: green;
+            color: green;
         }
 
         #entradaEditable span.incorrecto {
-          color: red;
+            color: red;
         }
 
         #entradaEditable {
-          white-space: pre-wrap;
-          outline: none;
+            white-space: pre-wrap;
+            outline: none;
         }
     </style>
 </head>
@@ -41,6 +41,26 @@
     </div>
 </div>
 
-<script src="main.js"></script>
+<div id="registroForm" class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center hidden">
+    <div class="bg-white rounded-xl shadow-lg p-6 w-96 space-y-4 text-center">
+        <h2 class="text-xl font-semibold text-blue-600">Guardar récord</h2>
+        <input type="text" id="usuarioInput" placeholder="Nombre de usuario"
+               class="w-full p-2 border rounded text-gray-800" />
+        <input type="password" id="passwordInput" placeholder="Contraseña"
+               class="w-full p-2 border rounded text-gray-800" />
+        <button id="enviarRegistro" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">
+            Enviar
+        </button>
+
+        <!-- Botón para volver a jugar (inicialmente oculto) -->
+        <button id="reiniciarFinal"
+                class="hidden mt-4 bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">
+            Volver a jugar
+        </button>
+    </div>
+</div>
+
+
+<script src="js/main.js"></script>
 </body>
 </html>
