Cambio de tematica de ejercicios

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -93,9 +93,10 @@
 <div id="welcomeModal" class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center z-50 p-4">
     <div class="bg-white rounded-2xl shadow-2xl p-6 w-full max-w-md text-center space-y-4">
         <h2 class="text-2xl font-bold text-gray-800">👋 ¡Bienvenido a Speed Word!</h2>
-        <p class="text-gray-600">🕹️ Escribe el código que aparece en pantalla lo más rápido posible. Si te equivocas, deberás corregir el error antes de continuar.</p>
+        <p class="text-gray-600">🕹️ Escribe correctamente la frase que aparece en pantalla. Si te equivocas, deberás corregir antes de continuar.</p>
         <p class="text-gray-600">⏱️ El tiempo total se acumula durante los 5 niveles. ¡Entre más rápido y preciso seas, mejor!</p>
-        <p class="text-gray-600">🏆 Al final, podrás registrarte para ver si entraste al Top 10 o si rompiste tu récord anterior.</p>
+        <p class="text-gray-600">🏆 Al final, podrás registrar tu tiempo para ver si entraste al Top 10 o rompiste tu récord anterior.</p>
+
         <button onclick="cerrarModal()" class="mt-4 bg-blue-600 text-white px-4 py-2 rounded-xl hover:bg-blue-700 transition w-full">¡Entendido!</button>
     </div>
 </div>
